--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-database:19.1.0'
     implementation 'com.squareup.okhttp3:okhttp:3.8.1'
 
     //gson라이브러리
