--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,15 +40,17 @@ dependencies {
     //로티 애니메이션
     implementation 'com.airbnb.android:lottie:3.1.0'
 
+    //네아로 모듈
     implementation files('libs/naveridlogin_android_sdk_4.2.5.aar')
 
     //퐈이어베이스를 위한 라이브러리
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
-//    //구아로를 위한 라이브러리
-//    implementation 'com.google.firebase:firebase-database:16.0.5'
-//    implementation 'com.google.firebase:firebase-auth:16.0.5'
-//    //Google Login
-    implementation 'com.google.android.gms:play-services-auth:16.0.1'
+
+//    //구글 로그인을 위한 라이브러리
+    implementation 'com.google.firebase:firebase-core:16.0.0'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
+    implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
     //리싸이클러뷰를 사용하기 위한 라이브러리
     implementation 'com.android.support:appcompat-v7:29.3.1'
