--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.example.ptworld"
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -25,6 +25,17 @@ android {
 }
 
 dependencies {
+
+    //레트로핏 모듈
+    //출처 : https://square.github.io/retrofit/
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.7.2'
+
+    // okhttp모듈
+    //출처 : https://square.github.io/okhttp/
+    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+
     //webRTC라이브러리
     implementation 'org.webrtc:google-webrtc:1.0.+'
     implementation files('libs/autobanh.jar')
@@ -85,6 +96,9 @@ dependencies {
     // 카카오 로그인 sdk를 사용하기 위해 필요.
     api group: 'com.kakao.sdk', name: 'usermgmt', version: '1.14.0'
     implementation 'com.google.firebase:firebase-auth:19.1.0'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 //구아로를 위한 플러그인
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
