--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,14 +32,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
+        <activity android:name=".Activity.GoBroadCast"></activity>
+        <activity android:name=".Activity.MediaActivity" />
+        <activity android:name=".Activity.MediaPlayerActivity" />
+
+        <service android:name=".JavaUtils.MediaPlaybackService">
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowserService" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".Activity.UserListActivity" />
         <activity
             android:name=".Activity.ConnectActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -56,13 +68,13 @@
         </activity>
         <activity
             android:name=".Activity.SettingsActivity"
-            android:label="@string/settings_name"></activity>
+            android:label="@string/settings_name" />
         <activity
             android:name=".Activity.CallActivity"
             android:configChanges="orientation|smallestScreenSize|screenSize|screenLayout"
             android:label="@string/app_name"
             android:screenOrientation="fullUser"
-            android:theme="@style/CallActivityTheme"></activity>
+            android:theme="@style/CallActivityTheme" />
         <activity
             android:name=".Activity.Message"
             android:parentActivityName=".Activity.Login">
