--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions' // 익스텐션 플러그인 적용
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.example.ptworld"
-        minSdkVersion 21
+        minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -23,8 +25,22 @@ android {
         sourceCompatibility 1.8
     }
 }
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
+}
 
 dependencies {
+
+    //RTMP - Client모듈(PedroSG94의 rtmp-rtsp-stream-client-java)
+    //출처 : https://github.com/pedroSG94/rtmp-rtsp-stream-client-java
+    implementation 'com.github.pedroSG94.rtmp-rtsp-stream-client-java:rtplibrary:1.7.8'
+
+    //RTMP - Client모듈(TakuSemba의 RtmpPublisher)
+    //출처 : https://github.com/TakuSemba/RtmpPublisher
+    implementation 'com.github.takusemba:rtmppublisher:1.1.3'
+    implementation 'net.butterflytv.utils:rtmp-client:3.0.1'
 
     //레트로핏 모듈
     //출처 : https://square.github.io/retrofit/
